CODING STYLE (#2)
* created checkstyle config

* removing plugin hibernate main pom.xml

* setting up spotless

* fix spotless config

* makefile fmt

* update spotless config

* formatted settings files

* fix

* config palantir format

* formatting java code

* configure checkstyle

* checkstyle configured

* update checkstyle docs

* update checkstyle rules

* some stuff

* fmt

* fix lint logField

* fix lint

* fix lint

* fix lint

* pom formatting

* markdown formatting

* lint sql

* doc